<resources>
    <string name="_app_name">이번주 등산고?</string>
    <string name="kakao_btn_start">카카오로 시작하기</string>
    <string name="google_btn_start">구글로 시작하기</string>
    <string name="Apptitle">이번주 등산고?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_korea_mountain">국내 산 검색</string>
    <string name="tab_recommend_course">코스 추천</string>
    <string name="tab_difficulty_course">난이도별 코스</string>
    <string name="location">지역</string>
    <string name="height">높이(m)</string>
    <string name="info">소개</string>
    <string name="search">검색</string>
    <string name="mntn_height">산 높이</string>
    <string name="hiking_point">  산행 포인트</string>
    <string name="save">저장</string>
    <string name="notice_naver_image">네이버검색 이미지입니다.</string>
    <string name="moreInfo">더보기</string>
    <string name="manageAccount">계정관리</string>
    <string name="logout">로그아웃</string>
    <string name="noRegisteredReview">아직 등록된 리뷰가 없습니다.</string>
    <string name="showHikingReview">등산 후기 살펴보기</string>
    <string name="register">등록</string>
    <string name="plz_write_review">리뷰를 작성해주세요.</string>
    <string name="who_with">누구랑: </string>
    <string name="leave_a_review">리뷰 남기기</string>
    <string name="top_100_reason_title">100대 명산 선정 이유</string>
    <string name="main_record_notice">등록된 등산 기록이 없습니다.  등산 기록을 남겨보세요:)</string>
    <string name="ok">확인</string>
    <string name="bookmark_info">(북마크한 산이 이곳에 나타납니다.)</string>
    <string name="info_developer">개발자 정보</string>
    <string name="developer_github_page">https://github.com/Jungchaeyeon</string>
    <string name="delete_my_review">내 리뷰 삭제</string>
    <string name="delete_my_review_message">내 등산 리뷰를 삭제합니다.</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
</resources>