<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vi"
            type="com.jcy.letsgohiking.home.tab2.SearchFragment" />

        <variable
            name="vm"
            type="com.jcy.letsgohiking.home.tab2.SearchViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".home.tab1.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/gaegu_bold"
                android:text="@string/search_korea_mountain"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/search_edt"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/search_edit_background"
                android:drawableStart="@drawable/ic_loupe"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainTitle"
                android:text="@={vm.liveKeyword}"
                android:paddingStart="24dp" />

             <Button
                 android:id="@+id/search_btn"
                 android:layout_width="48dp"
                 android:layout_height="32dp"
                 app:layout_constraintEnd_toEndOf="@id/search_edt"
                 app:layout_constraintTop_toTopOf="@id/search_edt"
                 android:layout_marginEnd="16dp"
                 android:text="@string/search"
                 android:fontFamily="@font/gaegu_bold"
                 android:backgroundTint="#8ACF3B"
                 android:background="@drawable/button_8"
                 app:layout_constraintBottom_toBottomOf="@id/search_edt"
                 android:onClick="@{()->vi.onClickSearch(vm.liveKeyword)}"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_edt"
                app:tabIndicator="@drawable/circle_indicator"
                app:tabIndicatorColor="@color/circle_indicator_selector"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/tab_recommend_course" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/tab_difficulty_course" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/search_edt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>