<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jcy.letsgohiking.home.tab2.ReviewViewModel" />

        <variable
            name="vi"
            type="com.jcy.letsgohiking.home.tab2.MountainReviewActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.tab2.MountainReviewActivity">

        <TextView
            android:id="@+id/reviewTitle"
            style="@style/mountainInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="24dp"
            android:text="@string/showHikingReview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTitle" />

        <LinearLayout
            android:id="@+id/noReviewNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewTitle">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile" />

            <TextView
                style="@style/mountainInfoContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/item_review_bg"
                android:padding="8dp"
                android:text="@string/noRegisteredReview"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myReviewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/reviewEditText">

            <TextView
                android:id="@+id/myReview"
                style="@style/mountainInfoContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/item_review_bg"
                android:padding="8dp"
                android:text="@string/noRegisteredReview"
                android:visibility="visible" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_profile" />

        </LinearLayout>

        <EditText
            android:id="@+id/reviewEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/search_edit_background"
            android:fontFamily="@font/gaegu_regular"
            android:hint="@string/plz_write_review"
            android:maxLength="50"
            android:maxLines="3"
            android:paddingStart="24dp"
            android:paddingEnd="40dp"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="adsfasdfasdfasdfadsfasdfasdfadsfasdfadsfasdfadsfadsfasdfadsfasdfasdf" />

        <Button
            android:id="@+id/addReviewBtn"
            android:layout_width="48dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@color/trans"
            android:drawableEnd="@drawable/ic_baseline_send_24"
            android:fontFamily="@font/gaegu_bold"
            android:onClick="@{()->vi.onClickAddReview()}"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="@id/reviewEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/reviewEditText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>